-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u212, 11, 12
-
Component/s: client-libs
-
- 11-bp
- 7-bp
- 8-bp
- CPU19_07-critical-SQE-OK
- CPU19_07-critical-approved
- azul-interest
- cssn19_03_02
- cssn19_04_01
- jdk11u-fix-request
- jdk11u-fix-yes
- jdk8u-critical-request
- jdk8u-critical-yes
- jdk8u-fix-request
- jdk8u-fix-yes
- regression
- regression_8153732
- review-requested
- sn_30
- sn_31
- sn_32
- sn_33
- sn_34
- sn_35
- sn_36
- sn_37
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8228188 | 11.0.6-oracle | Unassigned | P3 | Resolved | Fixed | b01 |
| JDK-8222172 | 11.0.5-oracle | Alexey Ivanov | P3 | Resolved | Fixed | b02 |
| JDK-8223123 | 11.0.4-oracle | Unassigned | P3 | Resolved | Fixed | b03 |
| JDK-8223830 | 11.0.4 | Unassigned | P3 | Resolved | Fixed | b03 |
| JDK-8225659 | openjdk8u232 | Zhengyu Gu | P3 | Resolved | Fixed | b01 |
| JDK-8226299 | openjdk8u222 | Unassigned | P3 | Resolved | Fixed | b07 |
| JDK-8222176 | 8u231 | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8223083 | 8u221 | Alexey Ivanov | P3 | Resolved | Fixed | b03 |
| JDK-8222855 | 8u212 | Alexey Ivanov | P3 | Resolved | Fixed | b32 |
| JDK-8229595 | emb-8u231 | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8224438 | emb-8u221 | Alexey Ivanov | P3 | Resolved | Fixed | b03 |
| JDK-8225750 | 7u241 | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
Example:
javax/print/TextFlavorTest.java
----------System.out:(1/25)----------
No print service found.
----------System.err:(6/479)----------
java.lang.NullPointerException
at java.desktop/sun.print.PrintServiceLookupProvider$RemotePrinterChangeListener.doCompare(PrintServiceLookupProvider.java:413)
at java.desktop/sun.print.PrintServiceLookupProvider$RemotePrinterChangeListener.run(PrintServiceLookupProvider.java:432)
at java.base/java.lang.Thread.run(Thread.java:835)
- backported by
-
JDK-8222172 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8222176 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8222855 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8223083 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8223123 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8223830 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8224438 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8225659 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8225750 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8226299 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8228188 [Windows] Exception if no printers are installed.
-
- Resolved
-
-
JDK-8229595 [Windows] Exception if no printers are installed.
-
- Resolved
-
- relates to
-
JDK-8221263 [TEST_BUG] RemotePrinterStatusRefresh test is hard to use
-
- Resolved
-
-
JDK-8153732 Windows remote printer changes do not reflect in lookupPrintServices()
-
- Resolved
-
-
JDK-8222108 Reduce minRefreshTime for updating remote printer list on Windows
-
- Resolved
-