8212202: [Windows] Exception if no printers are installed

Reviewed-by: prr